Modernize AST with List.of() patterns and convenience constructors
- Replace Collections.emptyList()/singletonList() with List.of() across 17+ AST files
- Replace Collections.emptyMap() with Map.of() where applicable
- Add @NotNull to list fields: ForStatement.init/update, ConditionalStatement.conds,
  AssertStatement.conds, TupleExpression.exprs
- Add convenience constructors:
  - StatementBlock() for empty blocks
  - MapExpression(type, lEndPos) for empty maps
  - Break.withNarrow() factory method with empty mapAssign
- Remove unused Collections imports
- Fix duplicate Collectors imports in ForStatement/ListExpression
- Update CONTINUATION-PROMPT.md and PLAN-AST-MODERNIZATION.md

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>