@@ -2,7 +2,6 @@ package org.xvm.compiler.ast;
 
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.xvm.asm.Component.Format;
@@ -89,14 +88,14 @@ public class AnonInnerClass {
      * @return the Contributions suggested for the anonymous inner class
      */
     public List<CompositionNode> getCompositions() {
-        return m_listCompositions == null ? Collections.emptyList() : m_listCompositions;
+        return m_listCompositions == null ? List.of() : m_listCompositions;
     }
 
     /**
      * @return the Annotations suggested for the anonymous inner class
      */
     public List<AnnotationExpression> getAnnotations() {
-        return m_listAnnos == null ? Collections.emptyList() : m_listAnnos;
+        return m_listAnnos == null ? List.of() : m_listAnnos;
     }
 
 
