@@ -5,7 +5,6 @@ import java.lang.reflect.Field;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -869,7 +868,7 @@ public class InvocationExpression
                     return null;
                 }
 
-                Map<FormalConstant, TypeConstant> mapTypeParams = Collections.emptyMap();
+                Map<FormalConstant, TypeConstant> mapTypeParams = Map.of();
                 if (cTypeParams > 0) {
                     transformTypeArguments(ctx, listArgs, atypeArgs);
 
